--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,4 @@ database:
   driver-class-name: com.mysql.cj.jdbc.Driver
   jdbcUrl: jdbc:mysql://localhost:3306/banco_de_sangue
   username: root
-  password: Erdaxel10792!
+  password: root
