--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
 
 database:
   driver-class-name: com.mysql.cj.jdbc.Driver
-  jdbcUrl: jdbc:mysql://localhost:3306/banco_de_sangue
+  jdbcUrl: jdbc:mysql://mysql:3306/banco_de_sangue
   username: root
   password: root
