--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,18 @@
 			<version>3.3.0</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>org.slf4j</groupId>-->
+<!--			<artifactId>slf4j-api</artifactId>-->
+<!--			<version>2.0.12</version>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>ch.qos.logback</groupId>-->
+<!--			<artifactId>logback-classic</artifactId>-->
+<!--			<version>1.5.6</version>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<build>
